# azi-cpp

./: .gitignore
cmake_tutorial/: CMakeLists.txt  CMakePresets.json  main.cpp
color_mean/: CMakeLists.txt  CMakePresets.json  main.cpp
crann/: CMakeLists.txt  main.cpp
en_el/: CMakeLists.txt  main.cpp
gol/: CMakePresets.json  CmakeLists.txt
gol/include/: CMakeLists.txt  GameState.hpp  Grid.hpp
gol/src/: CMakeLists.txt  main.cpp
hello_there/: CMakeLists.txt  CSVParser.cpp  CSVParser.hpp  main.cpp
meow/: CMakeLists.txt  main.cpp
play_with_pipes/: CMakeLists.txt  example.txt  main.cpp
todo_tutorial/: CMakeLists.txt  README.md  quests.db
todo_tutorial/include/: CMakeLists.txt  TodoList.hpp
todo_tutorial/src/: AppState.hpp  CMakeLists.txt  TaskList.cpp  TaskList.hpp  main.cpp
todo_tutorial/tests/: CMakeLists.txt  tests.cpp
wiz_game/: CmakeLists.txt
wiz_game/include/: Blast.hpp  CMakeLists.txt  Charger.hpp  Crab.hpp  GameState.hpp  Ray.hpp  WizardState.hpp  WizgameColors.hpp
wiz_game/src/: CMakeLists.txt  main.cpp
